--- a/main/templates/add_detail.html
+++ b/main/templates/add_detail.html
@@ -109,10 +109,10 @@ height: 100vh;
     <label for="amount">Amount</label>
     <input type="number" class="form-control" name="amount" step="0.01" required>
 
-    <label >Date:</label>
+    <label>Date:</label>
     <input type="date"  name="date" class="form-control">
     <div class="form-group">
-        <label>person</label>
+        <label>To</label>
         <input type="text" class="form-control" name="person" required>
     </div>
     <div class="form-group">
