--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -6,6 +6,7 @@
 
 
 
+
     {% if user.is_authenticated %}
     
     
@@ -83,7 +84,7 @@
             
             <div class="col-md-4">
                 <div class="balance-box text-center">
-                   <a href="/repeated/"  > <h3>Total Expense</h3></a>
+                   <a href="/repeated_cat/"  > <h3>Total Expense</h3></a>
                     <p class="balance-value">₹ {{profile.expenses}}</p>
                 </div>
             </div>
